<resources>
    <string name="app_name">DANTLI CORP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages">Messages</string>
    <string name="message">Hi Jake, how are you? I saw on the app that we have crossed paths several times this week</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close\n</string>
    <string name="enter_url">Enter Url</string>
    <string name="enter_link">Enter Link</string>
    <string name="upload">Upload</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="all_employees_details">All Employees Details</string>
    <string name="send_notifications">Send Notifications</string>
    <string name="add_training">Add Training</string>
    <string name="live_chats">Live Chats</string>
    <string name="live_location_on_map">Live Location on Map</string>
    <string name="logout">Logout</string>
    <string name="training">Training</string>
    <string name="add_train">Add Training</string>
    <string name="team_let_s_welcome_to_the_dantli_corp_app">Team, Let’s Welcome to the Dantli Corp App</string>
    <string name="welcome_to_dantli_corp">Welcome to Dantli Corp</string>
    <string name="dantli_corp_collects_location_data_to_enable_breadcrumbs_and_map_data_even_when_the_app_is_closed_or_not_in_use">Dantli Corp collects location data to enable Breadcrumbs and Map data even when the app is closed or not in use</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
    <string name="not_added_yet">Not added yet</string>
    <string name="timesheet">Timesheet</string>
    <string name="date">Date</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="pay">Pay</string>
    <string name="add_timesheet">Add Timesheet</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="linked_in">Linked In</string>
    <string name="human_resource">Human Resource</string>
    <string name="direct_deposit">Direct Deposit</string>
    <string name="verification_of_employment_letter">Verification of Employment Letter</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="dob">DOB</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="setting">Setting</string>
    <string name="account">Account</string>
    <string name="ali_raza">Ali Raza</string>
    <string name="personal_info">Personal Info</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="support_us">Support Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="other">Other</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="create_an_amazing_experience_for_everyone_you_encounter_be_creative_and_innovative_do_more_with_less_remain_positive_seek_solutions_inspire_others_be_honest_with_all_people_remain_humble_love_what_you_do_embrace_change">Create an “Amazing” Experience for Everyone You Encounter, Be Creative and Innovative, Do More with Less, Remain Positive, Seek Solutions, Inspire Others, Be Honest With All People, Remain Humble, Love What You Do, Embrace Change</string>
    <string name="show_all_employees_location">Show All Employees Location</string>
    <string name="services">Services</string>
    <string name="check_in">Check In</string>
    <string name="add_details_here">Add details here</string>
    <string name="check_out">Check Out</string>
    <string name="chat_with_admin">Chat with Admin</string>
    <string name="all_checkin">All Checkin</string>
    <string name="your_message">Your Message…</string>
    <string name="need_to_update_your_payment_information">Need to update your payment information?</string>
    <string name="no_of_box">No of Box</string>
    <string name="check_in_details">Check In Details</string>
    <string name="number_of_box_you_deliver">Number of Box you deliver</string>
    <string name="submit">Submit</string>
    <string name="user_details">User Details</string>
    <string name="timesheet_submission">Timesheet Submission</string>
    <string name="invoice">Invoice</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="invoice_based_on">Invoice Based on?</string>
    <string name="start_time">Start Time</string>
    <string name="enter_start_time">Enter Start Time</string>
    <string name="end_time">End Time</string>
    <string name="enter_end_time">Enter End Time</string>
    <string name="total_hours">Total Hours</string>
    <string name="enter_total_hours">Enter Total Hours</string>
    <string name="comments">Comments</string>
    <string name="write_your_comments">Write your Comments</string>
    <string name="i_attest_that_to_the_best_of_my_knowledge_and_belief_all_information_above_is_accurate_and_complete">I attest that, to the best of my knowledge and belief, all information above is accurate and complete</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="are_you_courier">Are you Courier?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="notifications">Notifications</string>
    <string name="write_something">Write Something</string>
    <string name="send_notification">Send Notification</string>
    <string name="link">Link</string>
    <string name="simple">Simple</string>
    <string name="url">Url</string>
    <string name="email_phone">Email / Phone</string>
    <string name="new_user">New User?</string>
    <string name="social_links">Social Links</string>
    <string name="enter_facebook_url_optional">Enter facebook url (Optional)</string>
    <string name="enter_twitter_url_optional">Enter Twitter url (Optional)</string>
    <string name="enter_instagram_url_optional">Enter Instagram url (Optional)</string>
    <string name="enter_linkedin_url_optional">Enter LinkedIn url (Optional)</string>
    <string name="continue_">Continue</string>
    <string name="all_employees">All Employees</string>
    <string name="update_profile">Update Profile</string>
    <string name="inbox">Inbox</string>
    <string name="click_here">Click Here</string>
    <string name="need_a_verification_of_employment_letter">Need a Verification of Employment Letter?</string>
    <string name="timesheet_details">Timesheet Details</string>
    <string name="all_timesheets">All TimeSheets</string>
    <string name="welcome_to_dantli_corp_">Welcome to Dantli Corp</string>
    <string name="all_notifications">All Notifications</string>
    <string name="successfully_submitted">Successfully Submitted</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="please_enter_details">Please enter details.</string>
    <string name="invoice_">Invoice #</string>
    <string name="status">Status</string>
    <string name="details">" Details"</string>
    <string name="profile">Profile</string>
    <string name="courier_services">Courier Services</string>
    <string name="if_you_are_a_courier_please_use_this_section_while_completing_your_route">If you are a Courier, please use this section while completing your route</string>
    <string name="customer_support">Customer Support</string>
    <string name="start_route">Start Route</string>
    <string name="route_name">Route Name</string>
    <string name="adress">Address</string>
    <string name="no_of_package_picked_up">Number of Packages Picked Up</string>
    <string name="no_of_package_dropped_off">Number of Packages Dropped off</string>
    <string name="enter_here">Enter here</string>
    <string name="signature_here">Client Signature</string>
    <string name="not_available">Signature Not Available</string>
    <string name="end_route">End Route</string>
    <string name="routes">Routes</string>
    <string name="all_checkout">All Checkout</string>
    <string name="route_details">Route Details</string>
    <string name="please_check_out_before_check_in">Please check out before check in</string>
    <string name="please_check_in_before_check_out">Please check in before check out</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="total_days">Total days</string>
    <string name="show_all_dantli_corp_locations">Show all Dantli Corp Locations</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="mandarin_chinese">Mandarin Chinese</string>
    <string name="french">French</string>
    <string name="human_resources">Human Resources</string>
    <string name="pending">Pending Timesheets</string>


</resources>