<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_bolditalic"
                    android:gravity="center"
                    android:background="@color/app_color"
                    android:text="@string/timesheet_submission"
                    android:textColor="@color/white"
                    android:textSize="22dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/invoice"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editTextnumber"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/stroke_bg"
                    android:hint="@string/enter_number"
                    android:inputType="number"
android:textSize="14dp"
                    android:fontFamily="@font/poppins_light"

                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/stroke_bg"
                    android:textSize="14dp"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/enter_name"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/email_address"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/stroke_bg"
                    android:textSize="14dp"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/enter_email_address"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="25dp"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"

                    android:text="@string/invoice_based_on"
                    android:textColor="@color/textColor"
                    android:textSize="12dp" />

                <RadioGroup
                    android:id="@+id/work_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"

                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/app_color"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/hours" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/app_color"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/days" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/stroke_bg"
                    android:clickable="false"
                    android:cursorVisible="false"

                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textSize="14dp"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/date"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/start_time"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editTextstartTime"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/stroke_bg"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textSize="14dp"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/enter_start_time"

                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/end_time"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editTextEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/stroke_bg"
                    android:clickable="false"

                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textSize="14dp"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/enter_end_time"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/total_hours"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editTextTotal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/stroke_bg"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textSize="14dp"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/enter_total_hours"
                    android:padding="10dp"
                    android:textColor="@color/black"

                    android:textColorHint="@color/grey"

                    />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/comments"
                    android:textColor="@color/black"

                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editTextComments"
                    android:layout_width="match_parent"

                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/stroke_bg"
                    android:fontFamily="@font/poppins_light"
                    android:gravity="top"
                    android:textSize="14dp"
                    android:hint="@string/write_your_comments"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />

                <CheckBox
                    android:id="@+id/agree_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingLeft="10dp"
                    android:text="@string/i_attest_that_to_the_best_of_my_knowledge_and_belief_all_information_above_is_accurate_and_complete" />

                <TextView
                    android:id="@+id/buttonSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_margin="24dp"

                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="23dp" />


            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</androidx.cardview.widget.CardView><!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    app:cardCornerRadius="6dp">-->


    <!--</androidx.cardview.widget.CardView>-->