<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"

    app:cardCornerRadius="12dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_bolditalic"
                android:gravity="center"
                android:text="@string/check_in_details"
                android:textColor="@color/black"
                android:textSize="22dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/editTxtName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"

                android:background="@drawable/stroke_bg"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/name"
                android:padding="10dp"

                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/no_of_box"
                android:textColor="@color/black"

                android:textSize="16dp" />

            <EditText
                android:id="@+id/editTextBox"
                android:layout_width="match_parent"

                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/stroke_bg"
                android:fontFamily="@font/poppins_medium"
                android:gravity="top"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"

                android:hint="@string/number_of_box_you_deliver"
                android:inputType="number"
                android:padding="8dp" />

            <TextView
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_margin="24dp"

                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="23dp" />


        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView><!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    app:cardCornerRadius="6dp">-->


    <!--</androidx.cardview.widget.CardView>-->